[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/godot_llama/demo/demo.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Scroll" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
text = "godot_llama Demo"
horizontal_alignment = 1

[node name="ModelPathLabel" type="Label" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
text = "GGUF model path"

[node name="ModelPathRow" type="HBoxContainer" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SelectModelButton" type="Button" parent="MarginContainer/Scroll/VBox/ModelPathRow"]
layout_mode = 2
text = "Select Model..."

[node name="ModelPathValue" type="Label" parent="MarginContainer/Scroll/VBox/ModelPathRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "No model selected"
autowrap_mode = 2

[node name="ConfigRow" type="HBoxContainer" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LoadButton" type="Button" parent="MarginContainer/Scroll/VBox/ConfigRow"]
layout_mode = 2
text = "Load Model"

[node name="CreateContextButton" type="Button" parent="MarginContainer/Scroll/VBox/ConfigRow"]
layout_mode = 2
text = "Create Context"

[node name="NCtxLabel" type="Label" parent="MarginContainer/Scroll/VBox/ConfigRow"]
layout_mode = 2
text = "n_ctx"

[node name="NCtxSpin" type="SpinBox" parent="MarginContainer/Scroll/VBox/ConfigRow"]
layout_mode = 2
value = 2048.0
min_value = 256.0
max_value = 32768.0
step = 256.0

[node name="ThreadsLabel" type="Label" parent="MarginContainer/Scroll/VBox/ConfigRow"]
layout_mode = 2
text = "threads"

[node name="ThreadsSpin" type="SpinBox" parent="MarginContainer/Scroll/VBox/ConfigRow"]
layout_mode = 2
value = 4.0
min_value = 1.0
max_value = 64.0
step = 1.0

[node name="SystemPromptLabel" type="Label" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
text = "System prompt (NPC behavior)"

[node name="SystemPromptEdit" type="TextEdit" parent="MarginContainer/Scroll/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "You are a concise in-character NPC..."

[node name="WorldStateLabel" type="Label" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
text = "World state"

[node name="WorldStateEdit" type="TextEdit" parent="MarginContainer/Scroll/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
placeholder_text = "Current quest flags, location facts, known lore..."

[node name="MemoryRow" type="HBoxContainer" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HistoryTurnsLabel" type="Label" parent="MarginContainer/Scroll/VBox/MemoryRow"]
layout_mode = 2
text = "history_turns"

[node name="HistoryTurnsSpin" type="SpinBox" parent="MarginContainer/Scroll/VBox/MemoryRow"]
layout_mode = 2
value = 4.0
min_value = 0.0
max_value = 20.0
step = 1.0

[node name="ClearMemoryButton" type="Button" parent="MarginContainer/Scroll/VBox/MemoryRow"]
layout_mode = 2
text = "Clear Memory"

[node name="PromptLabel" type="Label" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
text = "Prompt"

[node name="PromptEdit" type="TextEdit" parent="MarginContainer/Scroll/VBox"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
placeholder_text = "Write a prompt..."

[node name="GenerateRow" type="HBoxContainer" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GenerateButton" type="Button" parent="MarginContainer/Scroll/VBox/GenerateRow"]
layout_mode = 2
text = "Generate"

[node name="MaxTokensLabel" type="Label" parent="MarginContainer/Scroll/VBox/GenerateRow"]
layout_mode = 2
text = "max_tokens"

[node name="MaxTokensSpin" type="SpinBox" parent="MarginContainer/Scroll/VBox/GenerateRow"]
layout_mode = 2
value = 128.0
min_value = 1.0
max_value = 2048.0
step = 1.0

[node name="TemperatureLabel" type="Label" parent="MarginContainer/Scroll/VBox/GenerateRow"]
layout_mode = 2
text = "temperature"

[node name="TemperatureSpin" type="SpinBox" parent="MarginContainer/Scroll/VBox/GenerateRow"]
layout_mode = 2
value = 0.7
min_value = 0.0
max_value = 2.0
step = 0.05

[node name="TopPLabel" type="Label" parent="MarginContainer/Scroll/VBox/GenerateRow"]
layout_mode = 2
text = "top_p"

[node name="TopPSpin" type="SpinBox" parent="MarginContainer/Scroll/VBox/GenerateRow"]
layout_mode = 2
value = 0.9
min_value = 0.0
max_value = 1.0
step = 0.01

[node name="StreamingCheck" type="CheckBox" parent="MarginContainer/Scroll/VBox/GenerateRow"]
layout_mode = 2
button_pressed = true
text = "Stream"

[node name="OutputLabel" type="Label" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
text = "Output"

[node name="OutputText" type="RichTextLabel" parent="MarginContainer/Scroll/VBox"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
bbcode_enabled = false
fit_content = false
scroll_active = true

[node name="StatusLabel" type="Label" parent="MarginContainer/Scroll/VBox"]
layout_mode = 2
text = "Status: ready"

[node name="ModelFileDialog" type="FileDialog" parent="."]
title = "Select GGUF Model"
size = Vector2i(900, 560)
ok_button_text = "Select"
file_mode = 0
access = 2
filters = PackedStringArray("*.gguf ; GGUF model files")
